[package]
name = "anon-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
kovi.workspace = true
async-openai = { version = "0.40.3", features = ["_api", "chat-completion"] }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
json = "0.12.4"
chrono = "0.4.44"
once_cell = "1.19"